--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,1 +1,115 @@
+* {
+	padding: 0;
+	margin: 0;
+}
 
+#waybar {
+    background-color: rgba(20, 20, 20, 0.4); /* Background 60% visible */
+    font-family: "JetBrainsMono Nerd Font";
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+
+#workspaces {
+	background-color: #2b2a2a;
+	border: 1px solid #2b2a2a;
+	border-radius: 10px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
+#workspaces button {
+	border: none;
+	background-color: transparent;
+	color: lightblue;
+	padding-left: 8px;
+	padding-right: 8px;
+	margin-left: 3px;
+}
+
+#workspaces button.active {
+	color: cyan;
+	border-bottom: 2px solid cyan;
+	padding-bottom: 0;
+}
+
+#taskbar button {
+    padding-left: 6px; 
+    padding-right: 6px; 
+}
+
+
+
+#network {
+	background-color: #2b2a2a;
+	border: 1px solid #2b2a2a;
+	border-radius: 10px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	margin-left: 8px;
+	padding-left: 6px;
+	padding-right: 6px;
+	/*color: #00ffff;*/
+}
+#pulseaudio-slider slider {
+	min-height: 0px;
+	min-width: 0px;
+	opacity: 0;
+	background-image: none;
+	border: none;
+	box-shadow: none;
+}
+
+#pulseaudio-slider trough {
+	min-height: 3px;
+	min-width: 90px;
+	border-radius: 3px;
+	background-color: grey;
+}
+
+#pulseaudio-slider highlight {
+	min-width: 10px;
+	border-radius: 5px;
+	background-color: #edd28e;
+}
+
+#pulseaudio.sink {
+	padding-right: 10px;
+}
+
+#custom-poweroff {
+	margin-right: 15px
+}
+
+
+#custom-reboot {
+	margin-right: 15px
+}
+
+#custom-lock {
+	margin-right: 10px
+}
+
+#backlight-slider slider {
+    min-height: 0px;
+    min-width: 0px;
+    opacity: 0;
+    background-image: none;
+    border: none;
+    box-shadow: none;
+}
+#backlight-slider trough {
+    min-height: 3px;
+    min-width: 90px;
+    border-radius: 3px;
+    background-color: grey;
+}
+#backlight-slider highlight {
+    min-width: 10px;
+    border-radius: 3px;
+    background-color: #edd28e;
+}
+
+#backlight{
+	padding-right: 10px;
+}
