--- a/DOTFILES/.config/swaync/style.css
+++ b/DOTFILES/.config/swaync/style.css
@@ -1,4 +1,10 @@
-
+/*  ____                                      _         _       */
+/* / ___|_      ____ _ _   _ _ __   ___   ___| |_ _   _| | ___  */
+/* \___ \ \ /\ / / _` | | | | '_ \ / __| / __| __| | | | |/ _ \ */
+/*  ___) \ V  V / (_| | |_| | | | | (__  \__ \ |_| |_| | |  __/ */
+/* |____/ \_/\_/ \__,_|\__, |_| |_|\___| |___/\__|\__, |_|\___| */
+/*                     |___/                      |___/         */
+/*  by ygweygyigyigyigerig (2025)                               */
 @import "theme.css";
 
 @define-color cc-bg @bg_main;
