--- a/DOTFILES/.config/waybar/style.css
+++ b/DOTFILES/.config/waybar/style.css
@@ -100,6 +100,9 @@
 #custom-swaync {
 	margin-right: 10px
 }
+#bluetooth {
+  margin-right: 9px
+}
 #custom-network-gui {
   background-color: #2b2a2a;
   border: 1px solid #2b2a2a;
